--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,15 @@ repositories {
     mavenCentral()
 }
 
-def selenideVersion = "6.7.2";
-    junitVersion = "5.9.0";
+def selenideVersion = "6.7.2",
+    junitVersion = "5.9.0",
+    slf4jVersion = "1.7.36";
 
 dependencies {
     testImplementation(
             "com.codeborne:selenide:$selenideVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion"
     )
 }
 
